Adding edit user to route and its business logic
